samples/kubernetes/ingress-nginx-canary/echo-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
spec:
  selector:
    app: echo
    version: v1
  ports:
    - port: 8080
      protocol: TCP
      name: http
      appProtocol: http
