samples/kubernetes/ingress-nginx-canary/echo-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
spec:
  selector:
    app: echo
    version: v2
  ports:
    - port: 8080
      protocol: TCP
      name: http
      appProtocol: http
