samples/kubernetes/ingress-nginx-canary/ingress-primary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-primary
spec:
  rules:
    - host: canary.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-v1
                port:
                  number: 8080
  ingressClassName: nginx
